--- a/ProyectoDesarrollo/src/Vista/GUI.fxml
+++ b/ProyectoDesarrollo/src/Vista/GUI.fxml
@@ -1,12 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
@@ -23,7 +16,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="ventanaPrincipal" maxHeight="617.0" maxWidth="837.0" minHeight="617.0" minWidth="837.0" prefHeight="617.0" prefWidth="837.0" style="-fx-background-color: #76a2cb;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.ControladorGUI">
+<AnchorPane id="AnchorPane" fx:id="ventanaPrincipal" maxHeight="617.0" maxWidth="837.0" minHeight="617.0" minWidth="837.0" prefHeight="617.0" prefWidth="837.0" style="-fx-background-color: #76a2cb;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.ControladorGUI">
    <children>
       <Pane fx:id="panelPrincipal" prefHeight="617.0" prefWidth="839.0" style="-fx-background-color: #76a2cb;" AnchorPane.leftAnchor="0.0">
          <children>
@@ -123,7 +116,7 @@
             </GridPane>
          </children>
       </Pane>
-      <Pane fx:id="ventanaMenu" prefHeight="617.0" prefWidth="839.0" visible="false">
+      <Pane fx:id="ventanaMenu" prefHeight="617.0" prefWidth="839.0">
          <children>
             <Pane fx:id="panelContenedor" layoutX="33.0" minHeight="617.0" minWidth="806.0" prefHeight="617.0" prefWidth="806.0">
                <children>
@@ -308,16 +301,16 @@
                            </cursor>
                         </Button>
                         <Button fx:id="boton_cotizacion_lateral" layoutY="312.0" mnemonicParsing="false" onAction="#botonCotizaciones" onMouseEntered="#desplegarBoton" onMouseExited="#esconderBoton" prefHeight="25.0" prefWidth="33.0" style="-fx-background-color: #76A2CB;">
-                           <graphic>
-                              <ImageView>
-                                 <image>
-                                    <Image url="@../Recursos/venta.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
+                           <graphic>
+                              <ImageView fitHeight="18.0" fitWidth="16.0">
+                                 <image>
+                                    <Image url="@../Recursos/icons8_accounting_50px_1.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
                         </Button>
                         <Button fx:id="boton_venta_lateral" layoutY="355.0" mnemonicParsing="false" onAction="#botonVentas" onMouseEntered="#desplegarBoton" onMouseExited="#esconderBoton" prefHeight="25.0" prefWidth="33.0" style="-fx-background-color: #76A2CB;">
                            <cursor>
