--- a/ProyectoDesarrollo/src/Vista/Inventario.fxml
+++ b/ProyectoDesarrollo/src/Vista/Inventario.fxml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -21,7 +15,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="617.0" prefWidth="806.0" style="-fx-background-color: C4DCF2;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.ControladorInventario">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="617.0" prefWidth="806.0" style="-fx-background-color: C4DCF2;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.ControladorInventario">
    <children>
       <TabPane fx:id="tabPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="Infinity" prefWidth="Infinity" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <tabs>
@@ -109,19 +103,21 @@
                               <Image url="@../Recursos/inventarioG.png" />
                            </image>
                         </ImageView>
-                        <Button fx:id="boton_guardar_inventario" alignment="BASELINE_LEFT" layoutX="563.0" layoutY="452.0" mnemonicParsing="false" onAction="#guardarInventario" prefHeight="32.0" prefWidth="129.0" style="-fx-background-color: #66c00b;" text="Guardar" textFill="WHITE">
+                        <Button fx:id="boton_guardar_inventario" alignment="CENTER" layoutX="563.0" layoutY="452.0" mnemonicParsing="false" onAction="#guardarInventario" prefHeight="42.0" prefWidth="129.0" style="-fx-background-color: #66c00b;" text="Guardar" textFill="WHITE">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
                            <font>
                               <Font name="System Bold" size="15.0" />
                            </font>
+                           <graphic>
+                              <ImageView fitHeight="26.0" fitWidth="24.0">
+                                 <image>
+                                    <Image url="@../Recursos/icons8_checkmark_26px.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
                         </Button>
-                        <ImageView fitHeight="26.0" fitWidth="24.0" layoutX="627.0" layoutY="455.0">
-                           <image>
-                              <Image url="@../Recursos/icons8_checkmark_26px.png" />
-                           </image>
-                        </ImageView>
                      </children>
                   </AnchorPane>
                </content>
@@ -171,19 +167,21 @@
                            </font>
                         </Label>
                         <TextField fx:id="textfield_cantidad_modificacion" disable="true" layoutX="186.0" layoutY="418.0" />
-                        <Button fx:id="boton_guardar_inventario_modificacion" alignment="BASELINE_LEFT" disable="true" layoutX="573.0" layoutY="482.0" mnemonicParsing="false" onAction="#guardar_Inventario_Modificado" prefHeight="42.0" prefWidth="103.0" style="-fx-background-color: #66c00b;" text="Guardar" textFill="WHITE">
+                        <Button fx:id="boton_guardar_inventario_modificacion" alignment="CENTER" disable="true" layoutX="573.0" layoutY="482.0" mnemonicParsing="false" onAction="#guardar_Inventario_Modificado" prefHeight="42.0" prefWidth="132.0" style="-fx-background-color: #66c00b;" text="Guardar" textFill="WHITE">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
                            <font>
                               <Font name="System Bold" size="15.0" />
                            </font>
+                           <graphic>
+                              <ImageView fitHeight="25.0" fitWidth="24.0">
+                                 <image>
+                                    <Image url="@../Recursos/icons8_checkmark_26px.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
                         </Button>
-                        <ImageView fitHeight="25.0" fitWidth="24.0" layoutX="646.0" layoutY="491.0">
-                           <image>
-                              <Image url="@../Recursos/icons8_checkmark_26px.png" />
-                           </image>
-                        </ImageView>
                         <Label layoutX="461.0" layoutY="156.0" text="Buscar (Id)">
                            <font>
                               <Font size="16.0" />
